# advent-of-code

./: .gitignore  Cargo.toml  day9_input
.github/workflows/: rust.yml
2022/: Cargo.toml
2022/input/: day22-net  day22-test-net  day23
2023/: Cargo.toml
2023/input/: day3-single-digit-example
2024/: Cargo.toml
2024/input/: day1
2025/src/: grid.rs
day-1/: diff.py
