[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2024"


[profile.release]
debug = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ahash = "0.8.6"
bumpalo = { version = "3.14.0", features = ["boxed"] }
byteorder = "1.5.0"
clap = { version = "4.4.10", features = ["derive"] }
gcd = "2.3.0"
hex = "0.4.3"
itertools = "0.12.0"
min-max-heap = "1.3.0"
ndarray = "0.15.6"
nom = "7.1.3"
rayon = "1.8.0"
regex = "1.10.2"
sha2 = "0.10.8"
slotmap = "1.0.7"
